2008-03-02  Bernhard Walle <bernhard.walle@gmx.de>

	* add .desktop file and install icon

2008-02-09  Bernhard Walle <bernhard.walle@gmx.de>

	* always re-discover devices with the "devices" command
	* new "start" command to only start the firmware without uploading
	  anything
	* added "-nostart" option to "upload" command

2008-02-05  Bernhard Walle <bernhard.walle@gmx.de>

	* fix order and add missing checks in configure.in so that the
	  automatic reconfiguration with make works when something has
	  changed in configure.in (thanks to Raymund Will for the patch)
	* use autoconf to detect endianess of the system (instead of macros
	  that contain a whitelist of architectures) to increase portability

2008-01-20  Bernhard Walle <bernhard.walle@gmx.de>

	* Windows: fix proxy settings when different proxys for different
	  protocols are specified

2008-01-19  Bernhard Walle <bernhard.walle@gmx.de>

	* Windows: honor IE proxy settings
	* CLI: make (Internet) download progress working

2008-01-10  Bernhard Walle <bernhard.walle@gmx.de>

	* GUI: make offline mode working, show only firmwares that are
	  available offline

2008-01-07  Bernhard Walle <bernhard.walle@gmx.de>

	* GUI: Fix local upload function (error in conversion from wxString
	  to std::string)
	* GUI: Fix alignment of the device information label (below the
	  combo box) if the string is long, especially on Windows

2008-01-06  Bernhard Walle <bernhard.walle@gmx.de>

	* GUI: implement firmware information dialog (and pin information)
	* GUI: Add http://www.embedded-projects.net/usbprog in the main window

2008-01-05  Bernhard Walle <bernhard.walle@gmx.de>

	* new string tokenizer that can deal with spaces by using quoting
	* Unix: local paths can contain "~" and "~user" now
	* new function Firmwarepool::readFromFile() to unify reading a
	  firmware file into a ByteVector

2008-01-04  Bernhard Walle <bernhard.walle@gmx.de>

	* delete the versions.xml file if parsing was not possible