@@ -14,6 +14,25 @@ usbprog-gui
 This is the GUI version of the USBprog programmer. There are no command line
 options. Use B<usbprog> is you prefer a command line version.
 
+=head1 OPTIONS
+
+Following options can be specified:
+
+=over 7
+
+=item B<-h> | B<--help>
+
+Prints a short help.
+
+=item B<-v> | B<--version>
+
+Prints the version number to standard output.
+
+=item B<-d> | B<--debug>
+
+Enable some debugging output.
+
+=back
 
 
 =head1 AUTHOR
