@@ -7,7 +7,6 @@ usbprog_SOURCES  	= io.h io.cc \
 			  usbprog.h usbprog.cc \
 			  configuration.h \
 			  configuration.cc \
-			  optionparser.h optionparser.cc \
 			  shell.h shell.cc \
 			  commands.cc commands.h \
 			  main.cc
