@@ -9,6 +9,7 @@ pkginclude_HEADERS    = usbprog.h \
 			firmwarepool.h \
 			devices.h \
 			digest.h \
+			optionparser.h \
 			stringutil.h
 
 lib_LTLIBRARIES       = libusbprog.la
@@ -19,6 +20,7 @@ libusbprog_la_SOURCES  = inifile.cc \
 			 firmwarepool.cc \
 			 devices.cc \
 			 usbprog.cc \
+			 optionparser.cc \
 			 digest.cc \
 			 stringutil.cc
 libusbprog_la_LIBADD   = ../md5/libmd5.a
